--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,5 @@
   text-align: center;
   background-color: #313131;
   min-height: 100vh;
-  padding: 0 256px
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+  padding: 0
 }
